# Auto-Dictionary-Generation-using-Agentic-AI

./: .example.env  .gitignore  Dockerfile  Dockerfile.ollama  Dockerfile.streamlit  README.md  app.py  check_connection.py  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt  test.py
outputs/: output_spanish_3.json  output_spanish_4.json
src/: crew.py  database.py  helpers.py  kokoro_tts.py
src/LLM/: ollama.py  ollama_llm.py
src/agents/: agent.py
src/auto_dict/: crew.py
src/auto_dict/config/: agents.yaml  tasks.yaml
src/auto_dict/models/: models.py
src/auto_dict/utils/: split_text.py  to_pydantic.py
src/constants/: Dictionary_generator.prompt  keyword_extractor.prompt
src/langchain_agentic/: keyword_researcher.py
src/models/: models.py
src/outputs/: output_1.json  output_2.json  output_spanish.json  output_spanish.md  output_spanish_2.json
src/sample_data/: sample_spanish.txt
src/tasks/: tasks.py
src/tools/: tool.py
src/utils/: detect_lang.py  split_text.py  to_pydantic.py
