[project]
name = "auto_dict"
version = "0.1.0"
description = "auto-dict using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0"
]

[project.scripts]
auto_dict = "auto_dict.main:run"
run_crew = "auto_dict.main:run"
train = "auto_dict.main:train"
replay = "auto_dict.main:replay"
test = "auto_dict.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
