[project]
name = "auto-dict-2"
version = "0.1.0"
description = ""
authors = [
    {name = "praj-17", email = "pwaykos1@gmail.com"}
]
readme = "README.md"
requires-python = "=3.10"
dependencies = [
    "crewai[tools] (>=0.108.0,<0.109.0)",
    "simplerllm (>=0.3.1.14,<0.4.0.0)",
    "langchain-ollama (>=0.3.1,<0.4.0)",
    "databricks (>=0.2,<0.3)",
    "databricks-sdk (>=0.49.0,<0.50.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "fpdf (>=1.7.2,<2.0.0)",
    "langdetect (>=1.0.9,<2.0.0)",
    "googletrans (>=4.0.2,<5.0.0)",
    "streamlit (>=1.44.1,<2.0.0)",
    "kokoro (>=0.9.4,<0.10.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "pymongo (>=4.12.0,<5.0.0)",
    "pycountry (>=24.6.1,<25.0.0)",
    "streamlit-pdf-viewer (>=0.0.22,<0.0.23)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
